# sludge

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  main.sludge
.github/workflows/: test.yaml
examples/: main.sludge
src/: ast.rs  grammar.pest  interpreter.rs  main.rs  parser.rs
src/ast/: mod.rs  parser.rs
src/interpreter/: mod.rs  tests.rs  value.rs  variable_scope.rs
src/interpreter/builtins/: dict.rs  list.rs  mod.rs  set.rs
