[package]
name = "sludge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
lazy_static = "1.5.0"
pest = "2.8.2"
pest_derive = "2.8.2"
rustyline = "17.0.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
yansi = "1.0.1"
